feat(desktop): 实现HLS协议流媒体播放